tests/fixtures/invalid-only/non-compliant-second.php
<?php

/**
 * Another non-compliant fixture without required header comment.
 */
declare(strict_types=1);
